[package]
name = "simple_jwt"
version = "1.0.0"
license = "MIT"
authors = ["realli <lrlanswer@gmail.com>"]
build = "build.rs"
keywords = ["jwt", "web", "json", "token"]
description = "json web token encode/decode"
repository = "https://github.com/realli/simple_jwt"
documentation = "http://realli.github.io/simple_jwt/simple_jwt/"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "~0.4.0"

[dependencies.openssl]
version = "0.9.2"
