[package]
name = "simple_jwt"
version = "1.2.1"
license = "MIT"
authors = ["realli <lrlanswer@gmail.com>"]
keywords = ["jwt", "web", "json", "token"]
description = "simple JWT encoder/decoder"
repository = "https://github.com/realli/simple_jwt"
readme = "Readme.md"
documentation = "http://realli.github.io/simple_jwt/simple_jwt/"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "~0.7.0"
error-chain = "0.11"

[dependencies.openssl]
version = "0.10.26"

[badges]
travis-ci = { repository = "realli/simple_jwt" }
